# stargazing

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml  stargazing_app.py  task-definition.json
.github/workflows/: deploy.yml
config/: airflow.cfg
dags/: ecs_weather_pipeline.py
lambda/: fetch_score_handler.py  fetch_weather_handler.py
src/: compute_score.py  fetch_weather.py  pipeline.py  s3_utils.py
